98-bookinfo-layered/02-istiopolicy/01-fe/01-deny-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: ossm-bookinfo-fe
spec:
  {}
---
